--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "private": false,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "export": "next build && next export",
     "lint": "next lint",
